--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -59,14 +59,13 @@
                 <div>
                     <h1>About us</h1>
                     <img src="/static/img/fairygirl.jpg" alt="AboutUs" style="float:left" hspace="6" vspace="6">
-                    <p>Az alap Lorem Ipsum bekezdést az 1500-as évek óta használják
-                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                        culpa qui officia deserunt mollit anim id est laborum."</p>
+                    <p>This is a demo page where you can read bed time stories.
+                        After login you will be able to search, rate and mark as favourite.
+                        For extra charge you will be able to set rates and marks for your kids personally.
+                        In the future you will have the opportunity to write your own story, add to cart and send to print.
+                        "</p>
+
+
                 </div>
                 <div>
                     <h2>Contact us</h2>
