--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -6,108 +6,112 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Stories Demo Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/style.css">
-    </head>
+</head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-        <a class="navbar-brand" href="#"><img src="main/webapp/static/img/logo.png" width="30" height="30"
-                class="d-inline-block align-top" alt="">
-            My Stories</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+<nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <a class="navbar-brand" href="#"><img src="../../static/img/logo.png" width="30" height="30"
+                                          class="d-inline-block align-top" alt="">
+        My Stories</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="order.html">Order</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-        </div>
-    </nav>
-    <div class="container">
-
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8">
-
-                <div>
-                    <h1>About us</h1>
-                    <img src="/static/img/fairygirl.jpg" alt="AboutUs" style="float:left" hspace="6" vspace="6">
-                    <p>This is a demo page where you can read bed time stories.
-                        After login you will be able to search, rate and mark as favourite.
-                        For extra charge you will be able to set rates and marks for your kids personally.
-                        In the future you will have the opportunity to write your own story, add to cart and send to print.
-                        "</p>
-
-
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="order.html">Order</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
                 </div>
-                <div>
-                    <h2>Contact us</h2>
-                    <img src="src/webapp/static/img/fairy.jpg" alt="Fairy" style="float:left" hspace="6" vspace="6">
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
+<div class="container">
 
-                    <table>
-                        <thead>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8">
 
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Adress: </td>
-                                <td>00001 Budapest Bigburger Street 5.</td>
-                            </tr>
-
-                            <tr>
-                                <td>Phone: </td>
-                                <td>0036 1 000 000</td>
-                            </tr>
-                            <tr>
-                                <td>Mail: </td>
-                                <td>mystories@demo.hu</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div>
-                    <h2>Popular Stories</h2>
-                    <img src="main/webapp/static/img/susu.jpg" alt="Susu" hspace="6" vspace="6">
-
-                </div>
+            <div>
+                <img src="../../static/img/fairy.png" alt="AboutUs" style="float:left" hspace="6" vspace="6"
+                     width="15.99999%">
+                <h1>About us</h1>
+                <p>This is a demo page where you can read bed time stories.
+                    After login you will be able to search, rate and mark as favourite.
+                    For extra charge you will be able to set rates and marks for your kids personally.
+                    In the future you will have the opportunity to write your own story, add to cart and send to print.
+                    "</p>
 
             </div>
-<div id="loginButton">
-    <h3>Ready?</h3>
-    <button type="button" class="btn btn-warning">Login</button>
-</div>
+            <hr>
+            <div>
+                <img src="../../static/img/contact.png" alt="Fairy" style="float:left" hspace="6" vspace="6"
+                     width="15.99999%">
+                <h2>Contact us</h2>
 
-            <div class="col-2"></div>
+                <table>
+                    <thead>
+
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Adress:</td>
+                        <td>00001 Budapest Bigburger Street 5.</td>
+                    </tr>
+
+                    <tr>
+                        <td>Phone:</td>
+                        <td>0036 1 000 000</td>
+                    </tr>
+                    <tr>
+                        <td>Mail:</td>
+                        <td>mystories@demo.hu</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <hr>
+            <div>
+                <h2>Popular Stories</h2>
+                <img src="../../static/img/susu.png" alt="Susu" hspace="6" vspace="6" height="150px">
+                <img src="../../static/img/fairygirl.png" alt="Fairi girl" hspace="6" vspace="6" height="150px">
+                <img src="../../static/img/fairies.png" alt="Fairies" hspace="6" vspace="6" height="150px">
+
+            </div>
+
         </div>
+        <div id="loginButton">
+            <h3>Ready?</h3>
+            <button type="button" class="btn btn-warning">Login</button>
+        </div>
+
+        <div class="col-2"></div>
     </div>
+</div>
 
 
 </body>
